Vulkan: Fix depth testing on AMD official drivers

Fixing depth testing issues on AMD official drivers by disabling shader
optimizations. We should check in Blender 4.4 after updating the
compiler if this workaround is still needed.

Partial fix for: #129265